--- a/ntbk_GenerateEvaluationData.ipynb
+++ b/ntbk_GenerateEvaluationData.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import math\n",
@@ -42,13 +34,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): We did not find a dynamic library in the library_dir of the library we use for blas. If you use ATLAS, make sure to compile it with dynamics library.\n",
+      "WARNING (theano.tensor.blas): We did not find a dynamic library in the library_dir of the library we use for blas. If you use ATLAS, make sure to compile it with dynamics library.\n"
+     ]
+    }
+   ],
    "source": [
-    "with open('models/fl_en/fl-en.nlm', 'rb') as f:\n",
-    "    config = pickle.load(f)\n",
-    "    model = NMT('nmt', config)\n",
-    "    model.load(f)\n",
-    "    f.close()"
+    "from models import fl_en\n",
+    "model = fl_en"
    ]
   },
   {
@@ -57,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_tokenizer = tokenizer(config['source_tokenizer'], lowercase=config['source_lowercase'])\n",
-    "source_eval = read('models/fl_en/source.data.eval', source_tokenizer, config['backwards'])"
+    "source_tokenizer = tokenizer(model.config['source_tokenizer'], lowercase=model.config['source_lowercase'])\n",
+    "source_eval = read('models/fl_en/source.data.eval', source_tokenizer, model.config['backwards'])"
    ]
   },
   {
@@ -67,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_tokenizer = tokenizer('word', lowercase=config['target_lowercase'])\n",
-    "references = read('models/fl_en/source.data.eval', target_tokenizer, config['backwards'])"
+    "target_tokenizer = tokenizer('word', lowercase=model.config['target_lowercase'])\n",
+    "references = read('models/fl_en/source.data.eval', target_tokenizer, model.config['backwards'])"
    ]
   },
   {
@@ -105,14 +103,6 @@
       "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counter({1: 7200, 2: 2, 3: 0, 4: 0})\n",
-      "Counter({1: 45782, 2: 41384, 3: 37071, 4: 32852})\n"
      ]
     }
    ],
@@ -157,15 +147,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Fraction(7200, 45782), Fraction(2, 41384), Fraction(0, 37071), Fraction(0, 32852)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_n = [Fraction(p_numerators[i], p_denominators[i], _normalize=False)\n",
     "    for i, _ in enumerate(weights, start=1)]"
@@ -180,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.052505985756835086\n"
+      "0.051080846141197525\n"
      ]
     },
     {
@@ -207,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -223,10 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "0.052505985756835086"
+       "0.051080846141197525"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
