--- a/ntbk_GenerateEvaluationData-en_fl.ipynb
+++ b/ntbk_GenerateEvaluationData-en_fl.ipynb
@@ -42,10 +42,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '107' (I am process '54')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /home/redperiabras/.theano/compiledir_Linux-4.4--Microsoft-x86_64-with-Ubuntu-16.04-xenial-x86_64-3.5.2-64/lock_dir\n"
+     ]
+    }
+   ],
    "source": [
-    "from models import fl_en\n",
-    "model = fl_en"
+    "from models import en_fl\n",
+    "model = en_fl"
    ]
   },
   {
@@ -55,7 +64,7 @@
    "outputs": [],
    "source": [
     "source_tokenizer = tokenizer(model.config['source_tokenizer'], lowercase=model.config['source_lowercase'])\n",
-    "source_eval = read('models/fl_en/source.data.test', source_tokenizer, model.config['backwards'])"
+    "source_eval = read('models/en_fl/source.data.test', source_tokenizer, model.config['backwards'])"
    ]
   },
   {
@@ -65,7 +74,7 @@
    "outputs": [],
    "source": [
     "target_tokenizer = tokenizer('word', lowercase=model.config['target_lowercase'])\n",
-    "references = read('models/fl_en/source.data.test', target_tokenizer, model.config['backwards'])"
+    "references = read('models/en_fl/source.data.test', target_tokenizer, model.config['backwards'])"
    ]
   },
   {
@@ -74,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = open('models/fl_en/result.data.test', 'w', encoding='utf-8')\n",
+    "output_file = open('models/en_fl/result.data.test', 'w', encoding='utf-8')\n",
     "\n",
     "hypotheses = []\n",
     "\n",
@@ -97,16 +106,12 @@
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
       "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n",
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
      ]
     }
    ],
    "source": [
-    "evaluation_file = open('models/fl_en/scores.data.eval.csv','w', encoding='utf-8')\n",
+    "evaluation_file = open('models/en_fl/scores.data.eval.csv','w', encoding='utf-8')\n",
     "\n",
     "p_numerators = Counter()\n",
     "p_denominators = Counter()\n",
@@ -161,7 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08741573227634315\n"
+      "0.6190846278257063\n"
      ]
     },
     {
@@ -169,7 +174,7 @@
      "output_type": "stream",
      "text": [
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
+      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
      ]
@@ -196,7 +201,7 @@
      "output_type": "stream",
      "text": [
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
+      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
      ]
@@ -204,7 +209,7 @@
     {
      "data": {
       "text/plain": [
-       "0.08741573227634315"
+       "0.6190846278257063"
       ]
      },
      "execution_count": 11,
