--- a/ntbk_ModelConfiguration.ipynb
+++ b/ntbk_ModelConfiguration.ipynb
@@ -2,18 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'models'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-f40334413110>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfl_en\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mpp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpprint\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPrettyPrinter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdepth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'models'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alignment_decay': 0.9999,\n",
+      " 'alignment_loss': 0.0,\n",
+      " 'alpha': 0.01,\n",
+      " 'attention_dims': 256,\n",
+      " 'backwards': False,\n",
+      " 'beta': 0.4,\n",
+      " 'char_embeddings_dropout': 0.0,\n",
+      " 'decoder_gate': 'lstm',\n",
+      " 'decoder_layernorm': False,\n",
+      " 'decoder_state_dims': 512,\n",
+      " 'dropout': 0.0,\n",
+      " 'embeddings_dropout': 0.0,\n",
+      " 'encoder_layernorm': False,\n",
+      " 'encoder_state_dims': 256,\n",
+      " 'gamma': 1.0,\n",
+      " 'layernorm': False,\n",
+      " 'len_smooth': 5.0,\n",
+      " 'recurrent_dropout': 0.0,\n",
+      " 'source_char_embedding_dims': 64,\n",
+      " 'source_embedding_dims': 256,\n",
+      " 'source_encoder': TextEncoder(6981, TextEncoder(67)),\n",
+      " 'source_lowercase': False,\n",
+      " 'source_tokenizer': 'word',\n",
+      " 'target_embedding_dims': 64,\n",
+      " 'target_encoder': TextEncoder(70),\n",
+      " 'target_lowercase': False,\n",
+      " 'target_tokenizer': 'char',\n",
+      " 'tn_epoch': 366,\n",
+      " 'ts_train': 1380916.7784311771}\n"
      ]
     }
    ],
@@ -21,10 +45,10 @@
     "import pickle\n",
     "import pprint\n",
     "\n",
-    "from models import fl_en\n",
+    "from models import en_fl\n",
     "\n",
     "pp = pprint.PrettyPrinter(depth=6)\n",
-    "pp.pprint(fl_en.config)\n",
+    "pp.pprint(en_fl.config)\n",
     "    "
    ]
   }
@@ -45,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
