--- a/ntbk_GenerateEvaluationData-en_fl.ipynb
+++ b/ntbk_GenerateEvaluationData-en_fl.ipynb
@@ -47,7 +47,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO (theano.gof.compilelock): Waiting for existing lock by process '107' (I am process '54')\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '902' (I am process '915')\n",
       "INFO (theano.gof.compilelock): To manually release the lock, delete /home/redperiabras/.theano/compiledir_Linux-4.4--Microsoft-x86_64-with-Ubuntu-16.04-xenial-x86_64-3.5.2-64/lock_dir\n"
      ]
     }
@@ -64,26 +64,26 @@
    "outputs": [],
    "source": [
     "source_tokenizer = tokenizer(model.config['source_tokenizer'], lowercase=model.config['source_lowercase'])\n",
-    "source_eval = read('models/en_fl/source.data.test', source_tokenizer, model.config['backwards'])"
+    "source_eval = read('models/en_fl/source.data.eval', source_tokenizer, model.config['backwards'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "target_tokenizer = tokenizer('word', lowercase=model.config['target_lowercase'])\n",
-    "references = read('models/en_fl/source.data.test', target_tokenizer, model.config['backwards'])"
+    "references = read('models/en_fl/source.data.eval', target_tokenizer, model.config['backwards'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = open('models/en_fl/result.data.test', 'w', encoding='utf-8')\n",
+    "output_file = open('models/en_fl/result.data.eval', 'w', encoding='utf-8')\n",
     "\n",
     "hypotheses = []\n",
     "\n",
@@ -96,20 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluation_file = open('models/en_fl/scores.data.eval.csv','w', encoding='utf-8')\n",
     "\n",
@@ -140,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,27 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6190846278257063\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "smoothing_function = SmoothingFunction().method0\n",
     "\n",
@@ -193,30 +164,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.6190846278257063"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.translate.bleu_score import corpus_bleu\n",
     "\n",
