--- a/ntbk_ModelConfiguration.ipynb
+++ b/ntbk_ModelConfiguration.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -29,15 +36,15 @@
       " 'recurrent_dropout': 0.0,\n",
       " 'source_char_embedding_dims': 64,\n",
       " 'source_embedding_dims': 256,\n",
-      " 'source_encoder': TextEncoder(6981, TextEncoder(67)),\n",
+      " 'source_encoder': TextEncoder(10117, TextEncoder(67)),\n",
       " 'source_lowercase': False,\n",
       " 'source_tokenizer': 'word',\n",
       " 'target_embedding_dims': 64,\n",
-      " 'target_encoder': TextEncoder(70),\n",
+      " 'target_encoder': TextEncoder(69),\n",
       " 'target_lowercase': False,\n",
       " 'target_tokenizer': 'char',\n",
-      " 'tn_epoch': 366,\n",
-      " 'ts_train': 1380916.7784311771}\n"
+      " 'tn_epoch': 78,\n",
+      " 'ts_train': 397938.45159101486}\n"
      ]
     }
    ],
@@ -45,10 +52,10 @@
     "import pickle\n",
     "import pprint\n",
     "\n",
-    "from models import en_fl\n",
+    "from models import fl_en as model\n",
     "\n",
     "pp = pprint.PrettyPrinter(depth=6)\n",
-    "pp.pprint(en_fl.config)\n",
+    "pp.pprint(model.config)\n",
     "    "
    ]
   }
