--- a/ntbk_GenerateEvaluationData-fl_en.ipynb
+++ b/ntbk_GenerateEvaluationData-fl_en.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "source_tokenizer = tokenizer(model.config['source_tokenizer'], lowercase=model.config['source_lowercase'])\n",
-    "source_eval = read('models/fl_en/source.data.eval', source_tokenizer, model.config['backwards'])"
+    "source_eval = read('models/fl_en/source.data.test', source_tokenizer, model.config['backwards'])"
    ]
   },
   {
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "target_tokenizer = tokenizer('word', lowercase=model.config['target_lowercase'])\n",
-    "references = read('models/fl_en/source.data.eval', target_tokenizer, model.config['backwards'])\n",
+    "references = read('models/fl_en/source.data.test', target_tokenizer, model.config['backwards'])\n",
     "print(references)"
    ]
   },
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_file = open('models/fl_en/result.data.eval', 'w', encoding='utf-8')\n",
+    "output_file = open('models/fl_en/result.data.test', 'w', encoding='utf-8')\n",
     "\n",
     "hypotheses = []\n",
     "\n",
@@ -88,25 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n",
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 4-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n",
-      "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
-      "BLEU scores might be undesirable; use SmoothingFunction().\n",
-      "  warnings.warn(_msg)\n"
+     "ename": "NameError",
+     "evalue": "name 'Counter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-eda1c787b2c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mevaluation_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'models/fl_en/scores.data.eval.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mp_numerators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mp_denominators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCounter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mhyp_lengths\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mref_lengths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Counter' is not defined"
      ]
     }
    ],
@@ -128,7 +121,7 @@
     "    set_data = '%d,%d' % (ref_len, hyp_len)\n",
     "    \n",
     "    for i, _ in enumerate(weights, start=1):\n",
-    "        p_i = modified_precision([reference], hypothesis, i)\n",
+    "        p_i = modified_precision(reference, hypothesis, i)\n",
     "        p_numerators[i] += p_i.numerator\n",
     "        p_denominators[i] += p_i.denominator\n",
     "        set_data += ',%d,%d' % (p_i.numerator, p_i.denominator)\n",
