--- a/ntbk_fl-en_Evaluator.ipynb
+++ b/ntbk_fl-en_Evaluator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
      "output_type": "stream",
      "text": [
       "Expecting: \n",
-      "0.6172910272480504\n"
+      "0.060922642890074576\n"
      ]
     },
     {
@@ -36,19 +36,16 @@
      "output_type": "stream",
      "text": [
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 2-gram overlaps.\n",
+      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
      ]
     }
    ],
    "source": [
-    "from models import en_fl\n",
-    "model = en_fl\n",
-    "\n",
-    "REFERENCE_FILE = 'models/en_fl/target.data.test'\n",
-    "HYPOTHESES_FILE = 'models/en_fl/result.data.test'\n",
-    "EVALUATION_FILE = 'models/en_fl/scores.data.test.csv'\n",
+    "REFERENCE_FILE = 'models/fl_en/target.data.eval'\n",
+    "HYPOTHESES_FILE = 'models/fl_en/result.data.eval'\n",
+    "EVALUATION_FILE = 'models/fl_en/scores.data.eval.csv'\n",
     "\n",
     "references = read(REFERENCE_FILE, word_tokenize, False)\n",
     "hypotheses = read(HYPOTHESES_FILE, word_tokenize, False)\n",
@@ -59,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +64,7 @@
      "output_type": "stream",
      "text": [
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
+      "Corpus/Sentence contains 0 counts of 4-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n",
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
@@ -75,7 +72,7 @@
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n",
       "/mnt/c/ubuntu-bash/filipineu/venv/lib/python3.5/site-packages/nltk/translate/bleu_score.py:490: UserWarning: \n",
-      "Corpus/Sentence contains 0 counts of 4-gram overlaps.\n",
+      "Corpus/Sentence contains 0 counts of 3-gram overlaps.\n",
       "BLEU scores might be undesirable; use SmoothingFunction().\n",
       "  warnings.warn(_msg)\n"
      ]
@@ -85,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "Result: \n",
-      "0.6172910272480504\n"
+      "0.060922642890074576\n"
      ]
     }
    ],
@@ -134,6 +131,31 @@
     "print(math.exp(math.fsum(s)))\n",
     "    \n",
     "output.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'strip'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-ce12163ec272>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbleu\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBLEU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mBLEU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhypotheses\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreferences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/mnt/c/ubuntu-bash/filipineu/modules/bleu.py\u001b[0m in \u001b[0;36mBLEU\u001b[0;34m(candidate, references)\u001b[0m\n\u001b[1;32m    134\u001b[0m     \u001b[0mprecisions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m         \u001b[0mpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcount_ngram\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcandidate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreferences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    137\u001b[0m         \u001b[0mprecisions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m     \u001b[0mbleu\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeometric_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprecisions\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mbp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/mnt/c/ubuntu-bash/filipineu/modules/bleu.py\u001b[0m in \u001b[0;36mcount_ngram\u001b[0;34m(candidate, references, n)\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0mcand_sentence\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcandidate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0msi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0mcand_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 65\u001b[0;31m         \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcand_sentence\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     66\u001b[0m         \u001b[0mlimits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'strip'"
+     ]
+    }
+   ],
+   "source": [
+    "from modules.bleu import BLEU\n",
+    "\n",
+    "BLEU(hypotheses, references)"
    ]
   }
  ],
