Update Model Walker

--- a/ntbk_ModelWalker.ipynb
+++ b/ntbk_ModelWalker.ipynb
@@ -22,7 +22,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading en-fl-1-61.nlm\n"
+      "Loading en-fl-1-61.nlm\n",
+      "Reloading source data...\n",
+      "Reloading target data...\n",
+      "Translating...\n"
      ]
     }
    ],
