added model walker

--- a/ntbk_ModelWalker.ipynb
+++ b/ntbk_ModelWalker.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -65,8 +73,7 @@
     "    bleu_results.append(bleu)\n",
     "    print('{} has BLEU score of {}'.format(nlm, bleu))\n",
     "    \n",
-    "print('Best Model identified is' + model_list[bleu_results.index(max(bleu_results))])\n",
-    "    \n"
+    "print('Best Model identified is' + model_list[bleu_results.index(max(bleu_results))])"
    ]
   }
  ],
